test_suite/tests/ui/with-variant/skip_de_newtype_field.stderr
error: variant `Newtype` cannot have both #[serde(deserialize_with)] and a field #0 marked with #[serde(skip_deserializing)]
 --> tests/ui/with-variant/skip_de_newtype_field.rs:5:5
  |
3 |   #[derive(Deserialize)]
  |            ----------- in this derive macro expansion
4 |   enum Enum {
5 | /     #[serde(deserialize_with = "deserialize_some_newtype_variant")]
6 | |     Newtype(#[serde(skip_deserializing)] String),
  | |________________________________________________^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
